Added meter descriptions

--- a/spec/dummy/config/locales/en.yml
+++ b/spec/dummy/config/locales/en.yml
@@ -21,3 +21,8 @@
 
 en:
   hello: "Hello world"
+
+  meter_cat:
+    descriptions:
+      user_created: New users created
+      login_failed: Login failures
