Starting mail integration

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     descriptions: Descriptions
     format: Format
     html: HTML
+    html_only: Please see the HTML attachment on this message.
     names: Names
     search: Search
     title: Meter Report
